name:                pi-eta-epsilon
version:             0.0.2
synopsis:            An implementation of the paper, "The Two Dualities of Computation: Negative and Fractional Types" by Roshan James and Amr Saby
homepage:            https://github.com/dmwit/pi-eta-epsilon
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner, Jonathan Fischoff, Drew Day
maintainer:          daniel@wagner-home.com
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:  Language.PiEtaEpsilon
                    
  other-modules:    Language.PiEtaEpsilon.Evaluator,
                    Language.PiEtaEpsilon.Parser,
                    Language.PiEtaEpsilon.Types,
                    Language.PiEtaEpsilon.Sugar,
                    Language.PiEtaEpsilon.Grammar
                    
  hs-source-dirs:   src
  build-depends:      base >= 3 && < 5
                    , ghc-prim >= 0.2 && <= 0.4
                    , logict >= 0.6 && < 0.7
                    , mtl >= 2.0 && < 2.3
                    , template-haskell >= 2.6 && < 2.9
                    , transformers >= 0.2 && < 0.4
                    , unification-fd >= 0.8 && <= 0.9
                    , BNFC-meta == 0.4.*
                    , data-default 
                    
--  ghc-options: -Wall

test-suite tests
   hs-source-dirs:  src, tests
   type:            exitcode-stdio-1.0
   main-is:         Main.hs
   build-depends:     base >= 3 && < 5
                    , ghc-prim >= 0.2 && <= 0.4
                    , logict >= 0.6 && < 0.7
                    , mtl >= 2.0 && < 2.3
                    , template-haskell >= 2.6 && < 2.9
                    , transformers >= 0.2 && < 0.4
                    , unification-fd >= 0.8 && <= 0.9
                    , BNFC-meta == 0.4.*
                    , data-default
                    , test-framework == 0.8.*
                    , testing-feat == 0.4.*
                    , test-framework-testing-feat == 0.1.*
                    , test-framework-th == 0.2.*
                    , HUnit == 1.2.*
                    , test-framework-hunit == 0.3.*
